# learning-opengl

./: .gitignore  CMakeLists.txt
include/: glutil.h
src/: main.cpp
