CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(learning)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(glfw 3.2 REQUIRED)
FIND_PACKAGE(glm REQUIRED)

INCLUDE_DIRECTORIES(include ${OpenGL_INCLUDE_DIRS} ${glfw3_INCLUDE_DIRS} ${glm_INCLUDE_DIRS})
LINK_LIBRARIES(${OpenGL_LIBRARIES} glfw glm)

ADD_EXECUTABLE(main source/main.cpp)

